# Robot-Arm-Modeling

./: .gitignore  CMakeLists.txt  README.md  arm_model.ipynb  arm_modeling.c  arm_modeling.h  commmands.sh  ik.py  jacobian.tex  jacobian_3dof.tex  unit_tests.c  user_math.c  user_math.h  visualize.py  wheel_leg.ipynb
model/: 4481N33_Precision Ball Bearing.SLDPRT  91290A113_NO THREADS_Alloy Steel Socket Head Screw.SLDPRT  91290A115_NO THREADS_Alloy Steel Socket Head Screw.SLDPRT  91290A121_NO THREADS_Alloy Steel Socket Head Screw.SLDPRT  91290A123_NO THREADS_Alloy Steel Socket Head Screw.SLDPRT  91290A139_NO THREADS_Alloy Steel Socket Head Screw.SLDPRT  91290A140_NO THREADS_Alloy Steel Socket Head Screw.SLDPRT  91290A144_NO THREADS_Alloy Steel Socket Head Screw.SLDPRT  91290A228_NO THREADS_Alloy Steel Socket Head Screw.SLDPRT  91290A231_NO THREADS_Alloy Steel Socket Head Screw.SLDPRT  92125A107_NO THREADS_18-8 Stainless Steel Hex Drive Flat Head Screw.SLDPRT  98541A113_External Retaining Ring.SLDPRT  Arm_1_part_A_v1.SLDPRT  Arm_1_part_A_v1_1.SLDPRT  Arm_1_part_B_v1.SLDPRT  Arm_axis_2.SLDASM  DM-8009.SLDPRT  DM-J4310-2EC.SLDPRT  DM-J4340-2EC.SLDPRT  arm_1_tube_support_print.SLDPRT  arm_J2_J3_Spacer.SLDPRT  arm_J2_J3_Spacer_1.SLDPRT  arm_J2_base_A.SLDPRT  arm_J2_base_B.SLDPRT  arm_J2_base_C.SLDPRT  arm_J3_back_shaft.SLDPRT  arm_J4_mount_front.SLDPRT  arm_axis_1.SLDASM  arm_axis_3.SLDASM  arm_axis_3_side.SLDPRT  arm_axis_3_side_1.SLDPRT  arm_axis_3_spacer.SLDPRT  arm_axis_4.SLDASM  arm_axis_5.SLDASM  arm_main(2).SLDASM  axis_4_connect_1.SLDPRT  axis_4_connect_2.SLDPRT  (+2 more)
(+9 files in other folders)
